--- a/index.html
+++ b/index.html
@@ -108,24 +108,21 @@
     </div>
 
     <!-- Modal de Sucesso -->
-    <div class="modal fade" id="modal-sucesso" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header bg-success text-white">
-                    <h5 class="modal-title">Sucesso!</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Membro cadastrado com sucesso!</p>
-                    <div id="modal-foto" class="text-center mb-3"></div>
-                    <p class="text-muted small">Os dados já estão disponíveis no sistema.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                </div>
+    <!-- Substitua o modal existente por este -->
+<div class="modal fade" id="modal-sucesso" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-body p-4 text-center">
+                <!-- Conteúdo será injetado via JavaScript -->
+            </div>
+            <div class="modal-footer justify-content-center">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                    Fechar
+                </button>
             </div>
         </div>
     </div>
+</div>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
