--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Cadastro de Membros</title>
+  <title>Cadastro de Membro</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Cadastrar Membro</h1>
+  <h1>Cadastro de Membro</h1>
   <form id="form-membro">
     <input type="text" name="nome" placeholder="Nome" required>
     <input type="text" name="endereco" placeholder="Endereço" required>
@@ -18,7 +18,6 @@
       <option value="diacono">Diácono</option>
       <option value="pastor">Pastor</option>
     </select>
-    <input type="file" accept="image/*" capture="environment" id="foto" required>
     <button type="submit">Cadastrar</button>
   </form>
 
