--- a/index.html
+++ b/index.html
@@ -45,17 +45,18 @@
   <!-- 🔹 FORMULÁRIO -->
   <h2>Cadastro de Membro</h2>
   <form id="form-membro">
-    <input type="text" name="nome" placeholder="Nome" required>
-    <input type="text" name="endereco" placeholder="Endereço" required>
-    <input type="date" name="batismo" required>
-    <select name="funcao" required>
-      <option value="">Selecione a função</option>
-      <option value="membro">Membro</option>
-      <option value="diacono">Diácono</option>
-      <option value="pastor">Pastor</option>
-    </select>
-    <button type="submit">Cadastrar</button>
-  </form>
+  <input type="text" name="nome" placeholder="Nome" required>
+  <input type="text" name="endereco" placeholder="Endereço" required>
+  <input type="date" name="batismo" required>
+  <select name="funcao" required>
+    <option value="">Selecione a função</option>
+    <option value="membro">Membro</option>
+    <option value="diacono">Diácono</option>
+    <option value="pastor">Pastor</option>
+  </select>
+  <input type="file" id="foto" accept="image/*" required>
+  <button type="submit">Cadastrar</button>
+</form>
 
   <script type="module" src="app.js"></script>
 </body>
