--- a/ficha.html
+++ b/ficha.html
@@ -4,6 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ficha do Membro</title>
+
+<style>
+  #foto {
+    display: block;       /* para poder centralizar */
+    margin: 0 auto 15px;  /* centraliza horizontalmente e dá margem abaixo */
+    width: 150px;         /* tamanho da foto */
+    height: 150px;        /* altura igual para ficar quadrada */
+    object-fit: cover;    /* cobre todo o espaço cortando bordas, sem distorcer */
+    border-radius: 50%;   /* deixa redonda */
+    box-shadow: 0 0 8px rgba(0,0,0,0.3); /* sombra opcional para destaque */
+  }
+</style>
+  
 </head>
 <body>
   <h2>Ficha do Membro</h2>
