--- a/index.html
+++ b/index.html
@@ -1,63 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cadastro de Membro</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    /* Estilo simples da navbar */
-    .navbar {
-      background-color: #333;
-      color: white;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .navbar h1 {
-      margin: 0;
-      font-size: 20px;
-    }
-
-    .navbar a {
-      color: white;
-      text-decoration: none;
-      margin-left: 20px;
-    }
-
-    .navbar a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-  <!-- 🔹 NAVBAR -->
-  <div class="navbar">
-    <h1>Cadastro da Igreja</h1>
-    <div>
-      <a href="index.html">Cadastro</a>
-      <a href="listagem.html">Listagem</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+      <a class="navbar-brand" href="#">Cadastro Igreja</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Cadastro</a></li>
+          <li class="nav-item"><a class="nav-link" href="listagem.html">Listagem</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
+
+  <div class="container my-5" style="max-width:600px;">
+    <h2 class="mb-4 text-center">Cadastro de Membro</h2>
+    <form id="form-membro" class="needs-validation" novalidate>
+      <div class="mb-3">
+        <label class="form-label">Foto</label>
+        <input type="file" class="form-control" id="foto" accept="image/*" required>
+        <div class="invalid-feedback">Selecione uma foto.</div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Nome</label>
+        <input type="text" class="form-control" name="nome" required>
+        <div class="invalid-feedback">Informe o nome.</div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Endereço</label>
+        <input type="text" class="form-control" name="endereco" required>
+        <div class="invalid-feedback">Informe o endereço.</div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Data do Batismo</label>
+        <input type="date" class="form-control" name="batismo" required>
+        <div class="invalid-feedback">Informe a data.</div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Função</label>
+        <select class="form-select" name="funcao" required>
+          <option value="">Selecione a função</option>
+          <option value="membro">Membro</option>
+          <option value="diacono">Diácono</option>
+          <option value="pastor">Pastor</option>
+        </select>
+        <div class="invalid-feedback">Escolha uma função.</div>
+      </div>
+      <button class="btn btn-primary w-100" type="submit">Cadastrar</button>
+    </form>
   </div>
 
-  <!-- 🔹 FORMULÁRIO -->
-  <h2>Cadastro de Membro</h2>
-  <form id="form-membro">
-  <input type="text" name="nome" placeholder="Nome" required>
-  <input type="text" name="endereco" placeholder="Endereço" required>
-  <input type="date" name="batismo" required>
-  <select name="funcao" required>
-    <option value="">Selecione a função</option>
-    <option value="membro">Membro</option>
-    <option value="diacono">Diácono</option>
-    <option value="pastor">Pastor</option>
-  </select>
-  <input type="file" id="foto" accept="image/*" required>
-  <button type="submit">Cadastrar</button>
-</form>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="app.js"></script>
+
+  <script>
+    const form = document.getElementById('form-membro');
+    form.addEventListener('submit', event => {
+      if (!form.checkValidity()) {
+        event.preventDefault();
+        event.stopPropagation();
+      }
+      form.classList.add('was-validated');
+    }, false);
+  </script>
 </body>
 </html>
