--- a/listagem.html
+++ b/listagem.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Listagem de Membros</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Lista de Membros</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .foto-mini {
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-right: 15px;
+      box-shadow: 0 0 3px rgba(0,0,0,0.2);
+    }
+    .membro-item {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      border-bottom: 1px solid #eee;
+    }
+    .membro-item:hover {
+      background-color: #f8f9fa;
+    }
+    .membro-texto {
+      flex: 1;
+    }
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -19,101 +45,55 @@
   </nav>
 
   <div class="container my-5">
-    <h2 class="mb-4 text-center">Membros Cadastrados</h2>
+    <h2 class="mb-4 text-center">Lista de Membros</h2>
 
-    <div class="row mb-3">
-      <div class="col-md-6">
-        <input id="search" type="text" class="form-control" placeholder="Buscar por nome..." />
-      </div>
-      <div class="col-md-6 text-end">
-        <button id="exportXlsx" class="btn btn-success me-2">Exportar Excel</button>
-        <button id="exportPdf" class="btn btn-danger">Exportar PDF</button>
-      </div>
+    <div class="mb-3">
+      <input id="search" type="text" class="form-control" placeholder="Buscar por nome...">
     </div>
 
-    <div class="table-responsive">
-      <table class="table table-striped table-bordered align-middle" id="tb-membros">
-        <thead class="table-light">
-          <tr><th>Nome</th><th>Função</th><th>Ação</th></tr>
-        </thead>
-        <tbody id="lista-membros"></tbody>
-      </table>
-    </div>
+    <div id="lista-membros" class="list-group"></div>
   </div>
 
   <script type="module">
     import { db } from './firebase-config.js';
-    import { ref, onValue, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+    import { ref, onValue } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
-    let membrosArray = [];
     const lista = document.getElementById("lista-membros");
     const search = document.getElementById("search");
+    let membros = [];
 
-    const render = () => {
-      const term = search.value.toLowerCase();
+    function render() {
+      const termo = search.value.toLowerCase();
       lista.innerHTML = '';
-      membrosArray
-        .filter(m => m.nome.toLowerCase().includes(term))
+
+      membros
+        .filter(m => m.nome.toLowerCase().includes(termo))
         .forEach(m => {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-            <td><input class="form-control" data-id="${m.id}" data-field="nome" value="${m.nome}"></td>
-            <td><input class="form-control" data-id="${m.id}" data-field="funcao" value="${m.funcao}"></td>
-            <td>
-              <button class="btn btn-sm btn-primary btn-edit" data-id="${m.id}">Salvar</button>
-              <button class="btn btn-sm btn-outline-danger btn-delete" data-id="${m.id}">Excluir</button>
-            </td>`;
-          lista.appendChild(tr);
+          const div = document.createElement('a');
+          div.className = "list-group-item list-group-item-action membro-item";
+          div.href = `ficha.html?id=${m.id}`;
+          div.innerHTML = `
+            <img src="${m.fotoURL || 'https://via.placeholder.com/50'}" class="foto-mini" alt="Foto">
+            <div class="membro-texto">
+              <strong>${m.nome}</strong><br>
+              <small class="text-muted">${m.funcao}</small>
+            </div>
+          `;
+          lista.appendChild(div);
         });
-    };
+    }
 
     search.addEventListener('input', render);
 
-    onValue(ref(db, 'membros'), snapshot => {
-      membrosArray = [];
-      snapshot.forEach(doc => {
-        membrosArray.push({id: doc.key, ...doc.val()});
+    onValue(ref(db, "membros"), (snapshot) => {
+      membros = [];
+      snapshot.forEach(child => {
+        membros.push({ id: child.key, ...child.val() });
       });
       render();
     });
-
-    lista.addEventListener('click', async e => {
-      const id = e.target.dataset.id;
-      if (e.target.classList.contains('btn-edit')) {
-        const row = e.target.closest('tr');
-        const nome = row.querySelector('input[data-field="nome"]').value;
-        const funcao = row.querySelector('input[data-field="funcao"]').value;
-        await set(ref(db, `membros/${id}`), { ...membrosArray.find(m=>m.id===id), nome, funcao });
-        alert('Dados salvos!');
-      }
-      if (e.target.classList.contains('btn-delete')) {
-        if (confirm('Excluir este membro?')) {
-          await remove(ref(db, `membros/${id}`));
-        }
-      }
-    });
-
-    // Exportação
-    window.mxl = membrosArray;
-    document.getElementById('exportXlsx').onclick = () => {
-      import('https://cdn.sheetjs.com/xlsx-0.19.2/package/xlsx.full.min.js').then(XLSX=>{
-        const ws = XLSX.utils.json_to_sheet(membrosArray.map(m=>({Nome:m.nome, Função:m.funcao})));
-        const wb = XLSX.utils.book_new();
-        XLSX.utils.book_append_sheet(wb, ws, 'Membros');
-        XLSX.writeFile(wb, 'membros.xlsx');
-      });
-    };
-    document.getElementById('exportPdf').onclick = () => {
-      import('https://cdn.jsdelivr.net/npm/jspdf@latest/dist/jspdf.umd.min.js').then(jsPDF=>{
-        const doc = new jsPDF.jsPDF();
-        doc.text('Lista de Membros', 10, 10);
-        membrosArray.forEach((m,i)=>{
-          doc.text(`${i+1}. ${m.nome} - ${m.funcao}`, 10, 20 + (i*10));
-        });
-        doc.save('membros.pdf');
-      });
-    };
   </script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
