--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Cadastro de Membro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -12,12 +12,35 @@
       object-fit: cover;
       border-radius: 50%;
       display: none;
-      margin: 10px auto;
-      box-shadow: 0 0 5px rgba(0,0,0,0.2);
+      margin: 0 auto 20px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    }
+    .form-wrapper {
+      max-width: 500px;
+      margin: 30px auto;
+    }
+    input[type="file"]::-webkit-file-upload-button {
+      visibility: hidden;
+    }
+    input[type="file"]::before {
+      content: 'Selecionar/Tirar Foto';
+      display: inline-block;
+      background: #0d6efd;
+      color: white;
+      padding: 6px 12px;
+      outline: none;
+      white-space: nowrap;
+      border-radius: 4px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    input[type="file"]:hover::before {
+      background: #0b5ed7;
     }
   </style>
 </head>
 <body>
+
   <!-- 🔹 Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
@@ -32,22 +55,35 @@
   </nav>
 
   <!-- 🔹 Formulário -->
-  <div class="container my-5">
+  <div class="container form-wrapper">
     <h2 class="text-center mb-4">Cadastro de Membro</h2>
-    <form id="form-membro" class="card p-4 shadow-sm">
+
+    <form id="form-membro" class="card p-4 shadow-sm text-center">
+
+      <!-- Pré-visualização da Foto -->
+      <img id="preview" class="foto-preview" alt="Prévia da Foto" />
+
+      <!-- Botão de Escolher Arquivo -->
       <div class="mb-3">
+        <input type="file" id="foto" accept="image/*" required style="border: none; display: block; margin: 0 auto;">
+      </div>
+
+      <div class="mb-3 text-start">
         <label class="form-label">Nome</label>
         <input type="text" name="nome" class="form-control" required>
       </div>
-      <div class="mb-3">
+
+      <div class="mb-3 text-start">
         <label class="form-label">Endereço</label>
         <input type="text" name="endereco" class="form-control" required>
       </div>
-      <div class="mb-3">
+
+      <div class="mb-3 text-start">
         <label class="form-label">Data de Batismo</label>
         <input type="date" name="batismo" class="form-control" required>
       </div>
-      <div class="mb-3">
+
+      <div class="mb-4 text-start">
         <label class="form-label">Função</label>
         <select name="funcao" class="form-select" required>
           <option value="">Selecione a função</option>
@@ -56,19 +92,14 @@
           <option value="pastor">Pastor</option>
         </select>
       </div>
-      <div class="mb-3">
-        <label class="form-label">Selecionar/Tirar Foto</label>
-        <input type="file" id="foto" accept="image/*" class="form-control" required>
-        <img id="preview" class="foto-preview mt-2" alt="Prévia da Foto">
-      </div>
+
       <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
     </form>
   </div>
 
-  <!-- Scripts -->
+  <!-- JS: app.js + miniatura -->
   <script type="module" src="app.js"></script>
   <script>
-    // Miniatura da foto
     const fotoInput = document.getElementById("foto");
     const preview = document.getElementById("preview");
 
