--- a/listagem.html
+++ b/listagem.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lista de Membros</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
       padding-top: 70px;
@@ -30,11 +30,14 @@
       color: inherit;
       flex-grow: 1;
     }
+    .checkbox-selecao {
+      display: none;
+    }
   </style>
 </head>
 <body>
 
-  <!-- 🔹 Navbar -->
+  <!-- 🔹 Navbar fixa -->
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Listagem de Membros</a>
@@ -42,26 +45,33 @@
     </div>
   </nav>
 
-  <!-- 🔹 Lista de membros -->
+  <!-- 🔹 Conteúdo -->
   <div class="container mt-4">
-    <div id="lista-membros" class="list-group"></div>
-    <div class="d-grid mt-4">
-      <button id="excluirSelecionados" class="btn btn-danger">Excluir Selecionados</button>
+
+    <!-- Botões de ação -->
+    <div class="mb-3 d-flex justify-content-between">
+      <button id="btnSelecionar" class="btn btn-secondary">Selecionar Cadastros</button>
+      <button id="btnExcluir" class="btn btn-danger d-none">Excluir Selecionados</button>
     </div>
+
+    <!-- Lista de membros -->
+    <div id="lista-membros" class="list-group"></div>
   </div>
 
-  <!-- 🔹 Firebase e lógica -->
+  <!-- 🔹 Firebase + lógica -->
   <script type="module">
     import { db } from './firebase-config.js';
     import { ref, onValue, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
     const lista = document.getElementById("lista-membros");
-    const excluirBtn = document.getElementById("excluirSelecionados");
+    const btnSelecionar = document.getElementById("btnSelecionar");
+    const btnExcluir = document.getElementById("btnExcluir");
+    let modoSelecao = false;
 
     const membrosRef = ref(db, "membros");
 
-    onValue(membrosRef, (snapshot) => {
-      const data = snapshot.val();
+    // Função para carregar os membros
+    function carregarMembros(data) {
       lista.innerHTML = "";
 
       if (!data) {
@@ -75,7 +85,7 @@
         item.className = "list-group-item membro-item";
 
         item.innerHTML = `
-          <input type="checkbox" class="form-check-input me-2" data-id="${id}">
+          <input type="checkbox" class="form-check-input me-2 checkbox-selecao" data-id="${id}">
           <a href="ficha.html?id=${id}" class="info-membro">
             <img src="${membro.fotoURL || ''}" class="foto-miniatura" alt="Foto">
             <div>
@@ -87,21 +97,47 @@
 
         lista.appendChild(item);
       }
+
+      atualizarVisibilidadeCheckboxes();
+    }
+
+    // Alterna visibilidade dos checkboxes
+    function atualizarVisibilidadeCheckboxes() {
+      const checkboxes = document.querySelectorAll(".checkbox-selecao");
+      checkboxes.forEach(cb => {
+        cb.style.display = modoSelecao ? "inline-block" : "none";
+      });
+
+      btnExcluir.classList.toggle("d-none", !modoSelecao);
+      btnSelecionar.textContent = modoSelecao ? "Cancelar Seleção" : "Selecionar Cadastros";
+    }
+
+    // Alternar seleção
+    btnSelecionar.addEventListener("click", () => {
+      modoSelecao = !modoSelecao;
+      atualizarVisibilidadeCheckboxes();
     });
 
-    excluirBtn.addEventListener("click", () => {
-      const checkboxes = document.querySelectorAll('input[type="checkbox"]:checked');
-      if (checkboxes.length === 0) {
-        alert("Selecione pelo menos um membro para excluir.");
+    // Excluir selecionados
+    btnExcluir.addEventListener("click", () => {
+      const selecionados = document.querySelectorAll(".checkbox-selecao:checked");
+      if (selecionados.length === 0) {
+        alert("Nenhum cadastro selecionado.");
         return;
       }
 
-      if (!confirm("Tem certeza que deseja excluir os membros selecionados?")) return;
+      if (!confirm("Tem certeza que deseja excluir os cadastros selecionados?")) return;
 
-      checkboxes.forEach(cb => {
+      selecionados.forEach(cb => {
         const id = cb.getAttribute("data-id");
         remove(ref(db, `membros/${id}`));
       });
+    });
+
+    // Carrega os dados do Firebase
+    onValue(membrosRef, (snapshot) => {
+      const data = snapshot.val();
+      carregarMembros(data);
     });
   </script>
 
