--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="listagem.html">Listagem</a>
+            <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
           </li>
         </ul>
       </div>
