--- a/listagem.html
+++ b/listagem.html
@@ -42,6 +42,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Listagem de Membros</a>
       <a class="btn btn-outline-light" href="index.html">← Cadastro</a>
+      <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
     </div>
   </nav>
 
