--- a/listagem.html
+++ b/listagem.html
@@ -37,12 +37,24 @@
 </head>
 <body>
 
-  <!-- 🔹 Navbar fixa -->
-  <nav class="navbar navbar-dark bg-dark fixed-top">
+  <!-- 🔹 Navbar fixa no topo -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Listagem de Membros</a>
-      <a class="btn btn-outline-light" href="index.html">← Cadastro</a>
-      <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
+      <a class="navbar-brand" href="#">Listagem de membros</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="menuNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="listagem.html">Listagem</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Cadastro</a>
+            <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
