--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -23,13 +23,23 @@
 </head>
 <body>
 
-  <!-- 🔹 Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <!-- 🔹 Navbar fixa no topo -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Aniversariantes</a>
-      <div class="navbar-nav">
-        <a class="nav-link" href="index.html">Cadastro</a>
-        <a class="nav-link" href="listagem.html">Listagem</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="menuNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="aniversariantes.html">Aniversariantes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Cadastro</a>
+            <a class="nav-link" href="listagem.html">Listagem</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
