--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     </div>
      
   </div>
+
+  <div class="w-full grid grid-cols-1 md:grid-cols-2 gap-6">
     <!-- Campos do formulário -->
     <div class="mb-3 text-start">
       <label class="form-label">Nome</label>
@@ -94,7 +96,7 @@
         <option value="pastor">Pastor</option>
       </select>
     </div>
-    
+   </div> 
     <!-- Botão cadastrar -->
     <div class="d-grid">
       <button type="submit" class="btn btn-success">Cadastrar</button>
