--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <!-- Função (ocupa duas colunas em desktop) -->
-        <div class="md-col-span-2">
+        <div>
           <label for="funcao" class="form-label required-field">Função</label>
           <div class="relative">
             <select id="funcao" name="funcao" class="form-control" required>
