--- a/listagem.html
+++ b/listagem.html
@@ -38,19 +38,21 @@
 <body>
 
   <!-- 🔹 Navbar fixa no topo -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Listagem de membros</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Cadastro da Igreja</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="menuNav">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Cadastro</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" href="listagem.html">Listagem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Cadastro</a>
             <a class="nav-link" href="aniversariantes.html">Aniversariantes</a>
           </li>
         </ul>
