--- a/ficha.html
+++ b/ficha.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="listagem.html">Listagem</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="ficha.html">Aniversariantes</a>
+            <a class="nav-link active" href="ficha.html">Ficha</a>
           </li>
         </ul>
       </div>
