--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <!-- Coluna 1 -->
         <div>
-          <label for="batismo" class="form-label required-field">Data de Batismo</label>
+          <label for="batismo" class="form-label">Data de Batismo</label>
           <div class="relative">
             <input type="date" id="batismo" name="batismo" class="form-control" required>
           <i class="fas fa-calendar-check input-icon"></i>
