--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
            <i class="fas fa-user-tag input-icon"></i>
           </div>
         </div>
+         <div>
+          <label for="nascimento" class="form-label required-field">Data de Nascimento</label>
+          <div class="relative">
+            <input type="date" id="nascimento" name="nascimento" class="form-control" required>
+           <i class="fas fa-birthday-cake input-icon"></i>
+          </div>
+        </div>
+        
       </div>
 
       <div class="text-center">
