--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        //campo telefone
+        <!-- campo telefone -->
         <div class="mb-4">
           <label for="telefone" class="form-label required-field">Telefone</label>
           <div class="relative">
@@ -108,7 +108,7 @@
           </div>
         </div>
         
-         //campo seleção de sexo
+         <!-- campo sexo -->
         <div class="mb-4">
           <label class="form-label required-field">Sexo</label>
           <div class="radio-group">
