--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
             <i class="fas fa-user-tag input-icon"></i>
           </div>
         </div>
+
+         <!-- Campo Sexo -->
         <div class="mb-4">
           <label class="form-label required-field">Sexo</label>
           <div class="radio-group">
