--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
           </div>
         </div>
 
+        <!-- Campo CEP -->
+        <div class="mb-4">
+          <label for="cep" class="form-label required-field">CEP</label>
+          <div class="relative">
+            <input type="text" id="cep" name="cep" class="form-control" required 
+                   placeholder="00000-000" maxlength="9">
+            <i class="fas fa-map-pin input-icon"></i>
+          </div>
+        </div>
+
         <!-- Coluna 2 -->
         <div>
           <label for="endereco" class="form-label required-field">Endereço</label>
