--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
 
   <!-- Carregando o JavaScript -->
   <script src="app.js"></script>
+ <script src="https://unpkg.com/imask"></script>
+
 </body>
 </html>
