--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             <i class="fas fa-map-marker-alt input-icon"></i>
           </div>
         </div>
-
-
+        
         <!-- Coluna 2 -->
         <div>
           <label for="endereco" class="form-label required-field">Endereço</label>
@@ -77,6 +76,33 @@
             <i class="fas fa-map-marker-alt input-icon"></i>
           </div>
         </div>
+
+        <!-- Campo bairro -->
+        <div>
+          <label for="bairro" class="form-label required-field">Bairro</label>
+            <div class="relative">
+              <input type="text" id="bairro" name="bairro" class="form-control" required placeholder="Digite o Bairro">
+              <i class="fas fa-map-marker-alt input-icon"></i>
+            </div>
+          </div>
+        
+          <!-- Campo Cidade -->
+          <div>
+            <label for="cidade" class="form-label required-field">Cidade</label>
+            <div class="relative">
+              <input type="text" id="cidade" name="cidade" class="form-control" required placeholder="Digite a Cidade">
+              <i class="fas fa-map-marker-alt input-icon"></i>
+            </div>
+          </div>
+
+          <!-- Campo Estado -->
+          <div>
+            <label for="estado" class="form-label required-field">Estado</label>
+            <div class="relative">
+              <input type="text" id="estado" name="estado" class="form-control" required placeholder="Digite o Estado">
+              <i class="fas fa-map-marker-alt input-icon"></i>
+            </div>
+          </div>
 
         <!-- Coluna 1 -->
         <div>
