--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
 
         <!-- Campo Telefone -->
-        <div class="mb-4">
+        <div>
           <label for="telefone" class="form-label required-field">Telefone</label>
           <div class="relative">
             <input type="text" id="telefone" name="telefone" class="form-control" required 
