--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="form-grid">
-        <!-- Coluna 1 -->
+        <!-- Campo nome -->
         <div>
           <label for="nome" class="form-label required-field">Nome Completo</label>
           <div class="relative">
@@ -68,7 +68,7 @@
           </div>
         </div>
         
-        <!-- Coluna 2 -->
+        <!-- Campo endereço -->
         <div>
           <label for="endereco" class="form-label required-field">Endereço</label>
           <div class="relative">
@@ -104,7 +104,7 @@
             </div>
           </div>
 
-        <!-- Coluna 1 -->
+        <!-- Campo batismo -->
         <div>
           <label for="batismo" class="form-label required-field">Data de Batismo</label>
           <div class="relative">
@@ -113,7 +113,7 @@
           </div>
         </div>
 
-        <!-- Coluna 2 -->
+        <!-- Campo nascimento -->
         <div>
           <label for="nascimento" class="form-label required-field">Data de Nascimento</label>
           <div class="relative">
@@ -122,7 +122,7 @@
           </div>
         </div>
 
-        <!-- Função (ocupa duas colunas em desktop) -->
+        <!-- Campo função -->
         <div>
           <label for="funcao" class="form-label required-field">Função</label>
           <div class="relative">
