--- a/register.html
+++ b/register.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Registrar Usuário</title>
-  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-auth.js"></script>
-  <script type="module" src="firebase-config.js"></script> <!-- seu arquivo de configuração -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
+  <script type="module" src="/firebase-config.js"></script> <!-- seu arquivo de configuração -->
   <style>
     body { font-family: Arial, sans-serif; max-width: 400px; margin: 50px auto; }
     input, button { width: 100%; margin: 10px 0; padding: 10px; }
